# ClubHub

./: .env.example  .gitignore  README.md  auth.py  database.py  docker-compose.yml  main.py  models.py  requirements.txt  schemas.py
backend/: .dockerignore  Dockerfile  alembic.ini  entrypoint.sh  pyproject.toml
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 0096ed622e47_college_requests_table.py  22dca534e69f_users_profile_completed.py  b7f3c1a9d2e4_fk_ondelete_rules.py  cb9de7e06f67_baseline_schema.py  d19c5a7b8e02_refresh_tokens_and_event_rsvps.py  e4a1f6c9d371_users_country_state.py
backend/app/: main.py
backend/app/core/: config.py  db.py  deps.py  exceptions.py  permissions.py  ratelimit.py  security.py  storage.py  tenant.py
backend/app/models/: __init__.py  base.py  club.py  college_request.py  content.py  request.py  task.py  user.py
backend/app/modules/action_requests/: router.py  schemas.py  service.py
backend/app/modules/announcements/: router.py  schemas.py  service.py
backend/app/modules/auth/: router.py  schemas.py  service.py
backend/app/modules/clubs/: router.py  schemas.py  service.py
backend/app/modules/college_requests/: router.py  schemas.py  service.py
backend/app/modules/domains/: router.py  schemas.py  service.py
backend/app/modules/events/: router.py  schemas.py  service.py
backend/app/modules/join_requests/: router.py  schemas.py  service.py
backend/app/modules/leaderboard/: router.py  schemas.py  service.py
backend/app/modules/members/: router.py  schemas.py  service.py
backend/app/shared/: __init__.py
backend/scripts/: seed.py
backend/tests/: conftest.py  test_announcements.py  test_auth.py  test_auth_google.py  test_auth_refresh.py  test_clubs.py  test_college_requests.py  test_domains.py  test_errors.py  test_events.py  test_ratelimit.py  test_tasks.py  test_tenancy.py  test_uploads.py  test_users.py
docs/: DEPLOYMENT.md  (+2 more)
(+123 files in other folders)
