[project]
name = "clubhub-backend"
version = "0.1.0"
description = "ClubHub — multi-tenant SaaS for running student clubs (FastAPI backend)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "sqlmodel>=0.0.22",
    "psycopg[binary]>=3.1",
    "alembic>=1.13",
    "pydantic-settings>=2.2",
    "python-jose[cryptography]>=3.3",
    "passlib[bcrypt]>=1.7.4",
    # passlib 1.7.4 breaks against bcrypt>=4.1 ("module 'bcrypt' has no attribute '__about__'").
    "bcrypt<4.1",
    "email-validator>=2.1",
    "python-multipart>=0.0.9",
    # Google sign-in: verifies GIS ID tokens against GOOGLE_CLIENT_ID (POST /auth/google).
    "google-auth>=2.29",
    # Avatar uploads: Pillow validates/resizes images; boto3 is the s3 storage backend.
    "pillow>=10.3",
    "boto3>=1.34",
    # Rate limiting (brute-force protection) on the auth + join-code endpoints.
    "slowapi>=0.1.9",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4",
    "pytest>=8.0",
    "httpx>=0.27",
    # Real-Postgres tests for CI / host runs. Inside compose we use the clubhub_test DB instead.
    "testcontainers[postgres]>=4.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
# B008: FastAPI puts Depends()/Header()/Query() in argument defaults by design, so this
# bugbear check is a false positive across the whole codebase.
ignore = ["B008"]

[tool.ruff.lint.per-file-ignores]
# Autogenerated Alembic migrations: long op.create_* / create_index calls are expected.
"alembic/versions/*" = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
